[package]
name = "miniworld"
version = "0.1.0"
authors = ["comp500 <comp500@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.5.0"
arcode = "0.1.2"
byteorder = "1.3.4"
flate2 = "1.0.17"
brotli = "3.3.0"
bitbit = "0.2.0"
anyhow = "1.0.32"
png = "0.16.7"
num_enum = "0.5.1"
random_color = "0.4"
palette = "0.5.0"
humansize = "1.0.1"
zstd = "0.5"