[package]
name = "miniworld"
version = "0.1.0"
authors = ["comp500 <comp500@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.5.0"
arcode = "0.2.3"
byteorder = "1.3.4"
flate2 = "1.0.17"
brotli = "3.3.0"
bitbit = "0.2.0"
anyhow = "1.0.32"
png = "0.16.7"
num_enum = "0.5.1"
random_color = "0.4"
palette = "0.5.0"
humansize = "1.0.1"
zstd = "0.5"
xz2 = "0.1.6"
tree-buf = "0.10.0"
enum_dispatch = "0.3.7"
simple-16 = "0.2.0"
enum-iterator = "0.6.0"
arrayvec = "0.7.1"
fixed-vec-deque = "0.1.9"
hilbert_index = "0.2.0"